# spacetraders

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  FLOWEXAMPLES.MD  Makefile  README.md  TODO.md  config.ini.template  env.example  main.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
GameDocs/: ApiLimits.md
api/: agent.py  client.py  fleet.py  handle_requests.py  systems.py  waypoints.py
app/: bootstrap.py
data/: enums.py  storage.py  warehouse.py
data/models/: runtime.py  ship.py  system.py  waypoint.py  waypoints.py
flow/: queue.py  scheduler.py
logic/: markets.py  mine.py  navigation.py  navigation_algorithms.py  scanner.py  utility.py
policy/: dispatcher.py  executor.py
scripts/: debug_navigate_to_mine.py  generate.sh  market_cli.py  purchase_ship.py
utils/: time.py
